--- a/src/app/authentication/login.component.html
+++ b/src/app/authentication/login.component.html
@@ -29,11 +29,11 @@
             <p *ngIf="loginForm.controls['password'].hasError('pattern') && (loginForm.controls['password'].dirty)">Password is invalid</p>
         </div>     
         <div class="form-group">
-            <button type="submit" [disabled]="!loginForm.valid" class="form-control btn btn-primary btn-lg">Login</button>
+            <button type="submit" [disabled]="!loginForm.valid" class="btn btn-block btn-primary">Login</button>
         </div>
     </form>
     <div class="form-group">
-        <a href="/auth/google" class="form-control btn btn-danger"><span class="fa fa-google-plus"></span> Sign in with Google</a>
+        <a href="/auth/google" class="btn btn-block btn btn-danger"><span class="fa fa-google-plus"></span> Sign in with Google</a>
     </div>
     <div class="text-center">        
         <p><a href="/forgot">Forgot password?</a></p>
