--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,5 @@
 $header-font-weight: 900;
 $header-font-size: 200%;
 $error-message-color: #ED4337;
+$header-left-color: #04529D;
+$header-right-color:  #FF2C06;
