--- a/src/app/splashscreen/splashscreen.component.html
+++ b/src/app/splashscreen/splashscreen.component.html
@@ -1,17 +1,11 @@
 <div class="text-center">
 	<H1><span class="titleleft">PC Prep</span><span class="titleright">Kit</span></H1>
-	<div >
-	<img src="assets/img/logo.png" class ="logo">
-	</div>
-
+		<img src="assets/img/logo.png" class ="img-responsive center-block logo">
 	<p class="statement"> Brought to you by</p>
-	<div >
-	<img src="assets/img/peacecorpslogo.png" class="logo">
-	</div>
-
+		<img src="assets/img/peacecorpslogo.png" class="img-responsive center-block logo">
 	<div class="progress">
-  		<div class="progress-bar pb" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" [style.width]="wid + '%'">
-  		<span class="sr-only">Progress Bar</span>
-  		</div>
-  	</div>
+		<div class="progress-bar pb" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" [style.width]="wid + '%'">
+			<span class="sr-only">Progress Bar</span>
+		</div>
+	</div>
 </div>
