--- a/src/app/splashscreen/splashscreen.component.scss
+++ b/src/app/splashscreen/splashscreen.component.scss
@@ -1,17 +1,17 @@
 @import “../variables”;
 
 .logo{
-  height: 200px;
+  max-width: 20%;
 }
 
 .titleleft{
-  color : #04529D;
+  color : $header-left-color;
   font-weight: $header-font-weight;
   font-size: $header-font-size;
 }
 
 .titleright{
-  color : #FF2C06;
+  color : $header-right-color;
   font-weight: $header-font-weight;
   font-size: $header-font-size;
 }
