--- a/src/app/splashscreen/splashscreen.component.html
+++ b/src/app/splashscreen/splashscreen.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <H1><span class="titleleft">PC Prep</span><span class="titleright">Kit</span></H1>
+  <H1><span class="header-1">PC Prep</span><span class="header-2">Kit</span></H1>
   <img src="assets/img/logo.png" class="img-responsive center-block logo">
   <p class="statement"> Brought to you by</p>
   <img src="assets/img/peacecorpslogo.png" class="img-responsive center-block logo">
