--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,17 +1,17 @@
 @import “../variables”;
 
-.registration_box{
+.registration_box {
   text-align: center;
 }
 
 .header-1 {
-  color : #04529D;
+  color : $header-left-color;
   font-weight: $header-font-weight;
   font-size: $header-font-size;
 }
 
 .header-2 {
-  color : #FF2C06;
+  color : $header-right-color;
   font-weight: $header-font-weight;
   font-size: $header-font-size;
 }
