--- a/src/app/splashscreen/splashscreen.component.html
+++ b/src/app/splashscreen/splashscreen.component.html
@@ -1,7 +1,7 @@
 <div class="text-center">
   <H1><span class="header-1">PC Prep</span><span class="header-2">Kit</span></H1>
   <img src="assets/img/logo.png" class="img-responsive center-block logo">
-  <p class="statement"> Brought to you by</p>
+  <p class="sub-heading-1"> Brought to you by</p>
   <img src="assets/img/peacecorpslogo.png" class="img-responsive center-block logo">
   <div class="progress">
     <div class="progress-bar pb" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" [style.width]="wid + '%'">
