--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<div class="col-xs-8 col-xs-offset-2 registration_box">
+	<div class="col-xs-8 col-xs-offset-2 text-center">
 		<h1><span class="header-1">PC Prep </span><span class="header-2"> Kit </span> </h1>
 		<h3 class="form-signin-heading">Sign up </h3>
 		<form [formGroup]="regForm" (ngSubmit)="onSubmit(regForm.value)">
