--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,17 +1,1 @@
-@import “../variables”;
-
-.registration_box {
-  text-align: center;
-}
-
-.header-1 {
-  color : $header-left-color;
-  font-weight: $header-font-weight;
-  font-size: $header-font-size;
-}
-
-.header-2 {
-  color : $header-right-color;
-  font-weight: $header-font-weight;
-  font-size: $header-font-size;
-}
+@import "../styles/components/_headings";
