Added Activity Intro Module with Header and Navbar

--- a/src/app/authentication/login.component.scss
+++ b/src/app/authentication/login.component.scss
@@ -1,27 +1,9 @@
-$header-font-weight: 900;
-$error-message-color: #ED4337;
-$header-font-size: 200%;
-
-.header-1 {
-    color : #04529D;
-    font-weight: $header-font-weight;
-    font-size: $header-font-size;
-}
-
-.header-2 {
-    color : #FF2C06;
-    font-weight: $header-font-weight;
-    font-size: $header-font-size;   
-}
-
-.sub-heading-1 {
-    color : #4A4A49;
-    font-weight: $header-font-weight;   
-}
+@import "../styles/components/_headings";
+@import "../styles/base/_errors";
 
 .desc {
     color : #9C9999;
-    font-size: 150%;    
+    font-size: 150%;
 }
 
 .pcprepkitlogo {
@@ -32,4 +14,3 @@ $header-font-size: 200%;
 .form-control-feedback {
     color: $error-message-color;
 }
-
