Introduction-Highlight-Activity

--- a/src/app/authentication/login.component.html
+++ b/src/app/authentication/login.component.html
@@ -37,7 +37,7 @@
     </div>
     <div class="text-center">        
         <p><a href="/forgot">Forgot password?</a></p>
-        <p>Need an account? <a href="/signup">Signup</a></p>
+        <p>Need an account? <a href="/register">Signup</a></p>
     </div>  
 
 </div>
