--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,8 +3,8 @@
     <div class="col-lg-5 col-lg-offset-4">
         <div class="row">
             <div class="menu-button">
-                <img class="hex" src="../../assets/img/intro.png">
-                <button class="but intro-btn">
+                <img class="hex" src="../../assets/img/intro.png" (click)="introPage()">
+                <button class="but intro-btn" (click)="introPage()">
                     Introduction
                 </button>
                 <div class="outer-circle intro-outer-circle">
