PC Policy Module (#21)

--- a/src/app/styles/base/_variables.scss
+++ b/src/app/styles/base/_variables.scss
@@ -7,3 +7,5 @@ $profile-pic-width: 200px;
 $profile-pic-padding: 15px;
 $sidebar-background: #FFFFFF;
 $sidebar-width: 200px;
+$font-black: #000000;
+
