--- a/src/app/introduction/highlight-activity.component.html
+++ b/src/app/introduction/highlight-activity.component.html
@@ -20,7 +20,7 @@
     </div>
 </div>
 <div class="row" [hidden]="!activityComplete">
-    <button class="arrow bounce col-lg-5 col-md-offset-6">
+    <button class="arrow-green bounce col-lg-5 col-md-offset-6">
         Next
     </button>
 </div>
