Added semi-colon and made PR changes

--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -1,10 +1,10 @@
 @import "../styles/components/_variables";
 
 ::selection {
-    background: $selection-yellow-background; /* WebKit/Blink Browsers */
+    background: $yellow; /* WebKit/Blink Browsers */
 }
 ::-moz-selection {
-    background: $selection-yellow-background; /* Gecko Browsers */
+    background: $yellow; /* Gecko Browsers */
 }
 h3 {
     text-align: center;
@@ -32,64 +32,47 @@ h2 {
     font-size: 1.5em;
 }
 
-.rectangle-speech-border {
-    position: relative;
-    padding: 50px;
-    width: 100%;
-    margin: 1em 0 3em;
-    border: 2px solid $black;
-    color: #333;
-    background: $white;
-    /* css3 */
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
+@mixin border-radius($radius1, $radius2) {
+    -webkit-border-bottom-right-radius: $radius1 $radius2;
+    -moz-border-radius-bottomright: $radius1 $radius1;
+    border-bottom-right-radius: $radius1 $radius1;
 }
 
-/* creates larger curve */
-.rectangle-speech-border:before {
+.rectangle-speech-border {
+  position: relative;
+  padding: 50px;
+  width: 100%;
+  margin: 1em 0 3em;
+  border: 2px solid black;
+  color: #333;
+  background: $white;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
+  &:before,
+  &:after {
     content: "";
     position: absolute;
     z-index: 10;
     bottom: -30px;
+    height: 30px;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    border-color: $black;
+    background: transparent;
+    display: block;
+  }
+  &:before {
     left: 50px;
     width: 50px;
-    height: 30px;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    border-color: $black;
-    background: transparent;
-    /* css3 */
-    -webkit-border-bottom-right-radius: 80px 50px;
-    -moz-border-radius-bottomright: 80px 50px;
-    border-bottom-right-radius: 80px 50px;
-    /* reduce the damage in FF3.0 */
-    display: block;
-}
-
-/* creates smaller curve */
-.rectangle-speech-border:after {
-    content: "";
-    position: absolute;
-    z-index: 10;
-    bottom: -30px;
+    @include border-radius(80px, 50px);
+  }
+  &:after {
     left: 55px;
     width: 20px;
-    height: 30px;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    border-color: $black;
-    background: transparent;
-    /* css3 */
-    -webkit-border-bottom-right-radius: 40px 50px;
-    -moz-border-radius-bottomright: 40px 50px;
-    border-bottom-right-radius: 40px 50px;
-    /* reduce the damage in FF3.0 */
-    display: block;
-}
-
-/* creates a white rectangle to cover part of the oval border*/
-.rectangle-speech-border > :first-child:after {
+    @include border-radius(40px, 50px);
+  }
+  > :first-child:after {
     content: "";
     position: absolute;
     bottom: -10px;
@@ -97,6 +80,7 @@ h2 {
     width: 24px;
     height: 15px;
     background: $white;
+  }
 }
 
 .arrow {
@@ -159,4 +143,3 @@ h2 {
 #file {
     display: none;
 }
-
