--- a/src/app/meds-n-labels/meds-n-labels.component.html
+++ b/src/app/meds-n-labels/meds-n-labels.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-5 col-lg-offset-4">
-            <h3>Medication & Labels</h3>
+            <h3 class="stage-header">Medication & Labels</h3>
         </div>
     </div>
     <router-outlet></router-outlet>
