--- a/src/app/meds-n-labels/meds-n-labels.component.scss
+++ b/src/app/meds-n-labels/meds-n-labels.component.scss
@@ -1,4 +1,4 @@
-h3{
+.stage-header{
     margin-left: 25%; 
     font-weight: 900;
     color: #04529D;
@@ -11,7 +11,7 @@ img {
 }
 
 .image-table {
-    border: 0px solid rgba(0, 0, 0, 0);
+    border: 0;
     text-align: center;
     width: 100%;
     height: auto;
