Added Comments and Addressed Issues

--- a/src/app/dragdrop/dragdrop.component.html
+++ b/src/app/dragdrop/dragdrop.component.html
@@ -9,22 +9,22 @@
       <div class="content">
         <div class="row">
           <div class="col-xs-4 col-xs-offset-2">
-            <div dnd-droppable class="panel panel-primary" [allowDrop]="allowDropFunction(box1Integer)" (onDropSuccess)="addTobox1Items($event)">
+            <div dnd-droppable class="panel panel-primary" [allowDrop]="allowDropFunction(box1)" (onDropSuccess)="addTobox($event,box1)">
               <div class="panel-heading">
                 Do
               </div>
               <div class="panel-body">
-                <div *ngFor="let item of box1Items"><div class="panel-body">  {{items.description}} </div></div>
+                <div *ngFor="let item of do"><div class="panel-body">  {{item.description}} </div></div>
               </div>
             </div>
           </div>
           <div class="col-xs-4">
-            <div dnd-droppable class="panel panel-danger" [allowDrop]="allowDropFunction(box2Integer)" (onDropSuccess)="addTobox2Items($event)">
+            <div dnd-droppable class="panel panel-danger" [allowDrop]="allowDropFunction(box2)" (onDropSuccess)="addTobox($event,box2)">
               <div class="panel-heading">
                 Dont
               </div>
               <div class="panel-body">
-                <div *ngFor="let item of box2Items"><div class="panel-body">  {{items.description}} </div></div>
+                <div *ngFor="let item of dont"><div class="panel-body">  {{item.description}} </div></div>
               </div>
             </div>
           </div>
@@ -34,8 +34,8 @@
             <div class="panel panel-success">
               <div class="panel-heading">Available to drag</div>
               <div class="panel-body">
-                <div *ngFor="let items of dosAndDonts" class="panel panel-default col-xs-6" dnd-draggable [dragData]=items>
-                  <div class="panel-body">  {{items.description}} </div>
+                <div *ngFor="let item of dosAndDonts" class="panel panel-default col-xs-6" dnd-draggable [dragData]=items>
+                  <div class="panel-body">  {{item.description}} </div>
                 </div>
               </div>
             </div>
