Added Multilanguage support added english.json

--- a/src/app/activityintro/activityintro.component.html
+++ b/src/app/activityintro/activityintro.component.html
@@ -5,10 +5,10 @@
 	<app-navbar #nav (togglePosition)="toggle()"> </app-navbar>
 	<div class="row">
 		<div [className]="position + ' introbody text-center'">
-			<H1> Introduction </H1>
-			<H2> Welcome </H2>
-			<p class="lead"> The next few activites will help us get started with learning about malaria, your responsibilities as a Peace Corps Volunteer, and the way you can protect yourself.</p>
-			<button type="button" class="btn btn-primary btn-lg">Cool, next</button>
+			<H1> {{language?.headings.introduction}} </H1>
+			<H2> {{language?.headings.welcome}} </H2>
+			<p class="lead"> {{language?.descriptions.bodyContent}} </p>
+			<button type="button" class="btn btn-primary btn-lg"> {{language?.messages.nextButton}} </button>
 		</div>
 	</div>
 </div>
