--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,9 @@
       <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
       </button>
     </div>
-    <div class="col-xs-6 col-sm-5"><span class="header-1 text-center">PC Prep</span><span class="header-2 text-center">Kit</span></div>
+    <div class="col-xs-6 col-sm-5"><span class="header-1 text-center">{{language?.headings.titleLeft}}</span><span class="header-2 text-center">{{language?.headings.titleRight}}</span></div>
     <div class="col-xs-4 col-sm-2">
-      <button type="button" class="btn btn-default logout-button" aria-label="Left Align" (click)="logout()">Logout</button>
+      <button type="button" class="btn btn-default logout-button" aria-label="Left Align" (click)="logout()">{{language?.messages.logoutButton}}</button>
     </div>
   </div>
 </div>
