--- a/src/app/introduction/picture-puzzle.component.html
+++ b/src/app/introduction/picture-puzzle.component.html
@@ -9,7 +9,7 @@
         <canvas width="480" height="360" [hidden]='webcamState === webcamStates.OPENED' id="canvas"></canvas>
     </div>
     <div class="col-md-3 col-md-offset-3">
-        <input type="file" name="file" id="file" accept="image/*" (change)="handleInputChange($event)">
+        <input type="file" name="file" id="file" class="hidden" accept="image/*" (change)="handleInputChange($event)">
         <button class="btn btn-block btn-danger btn-lg" *ngIf='webcamState!==webcamStates.OPENED' (click)="openWebcam()">{{webcamButtonText}}</button>
         <button class="btn btn-block btn-danger btn-lg" *ngIf='webcamState === webcamStates.OPENED' (click)="snapshot()">{{webcamButtonText}}</button>
         <button class="btn btn-block btn-primary btn-lg" (click)="fireFileButtonClick()">Choose Existing</button>
