--- a/src/app/introduction/introduction.component.scss
+++ b/src/app/introduction/introduction.component.scss
@@ -1,11 +1,12 @@
-@import "../styles/components/_variables";
 
 ::selection {
     background: $yellow; /* WebKit/Blink Browsers */
 }
+
 ::-moz-selection {
     background: $yellow; /* Gecko Browsers */
 }
+
 h3 {
     text-align: center;
     font-weight: $font-bold;
@@ -45,48 +46,46 @@ h2 {
 }
 
 .rectangle-speech-border {
-    position: relative;
-    padding: 50px;
-    width: 100%;
-    margin: 1em 0 3em;
-    border: 2px solid black;
-    color: #333;
+  position: relative;
+  padding: 50px;
+  width: 100%;
+  margin: 1em 0 3em;
+  border: 2px solid $black;
+  color: #333;
+  background: $white;
+  @include border-radius(50px);
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    z-index: 10;
+    bottom: -30px;
+    height: 30px;
+    border-style: solid;
+    border-width: 0 2px 2px 0;
+    border-color: $black;
+    background: transparent;
+    display: block;
+  }
+  &:before {
+    left: 50px;
+    width: 50px;
+    @include border-bottom-right-radius(80px 50px);
+  }
+  &:after {
+    left: 55px;
+    width: 20px;
+    @include border-bottom-right-radius(40px 50px);
+  }
+  > :first-child:after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 76px;
+    width: 24px;
+    height: 15px;
     background: $white;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    border-radius: 50px;
-    &:before,
-    &:after {
-        content: "";
-        position: absolute;
-        z-index: 10;
-        bottom: -30px;
-        height: 30px;
-        border-style: solid;
-        border-width: 0 2px 2px 0;
-        border-color: $black;
-        background: transparent;
-        display: block;
-    }
-    &:before {
-        left: 50px;
-        width: 50px;
-        @include border-bottom-right-radius(80px 50px);
-    }
-    &:after {
-        left: 55px;
-        width: 20px;
-        @include border-bottom-right-radius(40px 50px);
-    }
-    > :first-child:after {
-        content: "";
-        position: absolute;
-        bottom: -10px;
-        left: 76px;
-        width: 24px;
-        height: 15px;
-        background: $white;
-    }
+  }
 }
 
 .arrow {
@@ -145,3 +144,4 @@ h2 {
         transform: translateY(-15px);
     }
 }
+
