--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,13 +1,7 @@
-@import "../styles/components/_buttons";
-@import "../styles/components/_headings";
-@import "../styles/base/_variables";
+@import "../styles/main";
 
 .header-bar {
     background: $header-background;
     margin-top: 0;
     margin-bottom: 0;
-}
-
-.header-1 {
-    color: $headerbar-header-left-color;
 }
