--- a/src/app/authentication/login.component.scss
+++ b/src/app/authentication/login.component.scss
@@ -1,16 +1,10 @@
-@import "../styles/components/_headings";
-@import "../styles/base/_errors";
-
-.desc {
-    color : #9C9999;
-    font-size: 150%;
-}
+@import "../styles/main";
 
 .pcprepkitlogo {
-    width:25%;
+    width: 25%;
     height: auto;
 }
 
 .form-control-feedback {
-    color: $error-message-color;
+    color: $red;
 }
