--- a/src/app/pcpolicy/pcpolicy.component.html
+++ b/src/app/pcpolicy/pcpolicy.component.html
@@ -1,8 +1,9 @@
 <div class="header">
-  <app-header (togglenavbar)="nav.toggle()"></app-header>
+  <app-header (toggleNavbar)="nav.toggle()"> </app-header>
 </div>
 <div class="container-fluid">
-  <app-navbar #nav (toggleposition)="toggle()"></app-navbar>
+  <app-navbar #nav (togglePosition)="toggle()" (infoPop)="info.pop()"> </app-navbar>
+  <app-infokit #info > </app-infokit>
   <div class="row">
     <div [className]="position + ' pc-policy-body text-center'">
       <H1> {{language?.headings.introduction}} </H1>
