Made PR changes

--- a/src/app/malaria-101/malaria-101.component.html
+++ b/src/app/malaria-101/malaria-101.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-5 col-lg-offset-4" style="padding-left:7%">
-            <h3 class="stage-header">Malaria 101</h3>
+        <div class="col-lg-5 col-lg-offset-4">
+            <h3 class="header-1">Malaria 101</h3>
         </div>
     </div>
     <router-outlet></router-outlet>
