--- a/src/app/malaria-101/malaria-101.component.scss
+++ b/src/app/malaria-101/malaria-101.component.scss
@@ -1,8 +1,4 @@
-.stage-header{
-    margin-left: 25%; 
-    font-weight: 900;
-    color: #04529D;
-}
+@import "../styles/main";
 
 video{
     border: 3px solid #ECECEC;
