Changed alert messages

--- a/src/app/malaria-101/activity-1/activity-1-2.component.html
+++ b/src/app/malaria-101/activity-1/activity-1-2.component.html
@@ -11,10 +11,11 @@
 </div>
 
 <div class="row">
-    <button class="arrow-red col-lg-5 col-md-offset-2">
+    <button class="arrow-dnd-red col-lg-5 col-md-offset-2">
         Prev
     </button>
-    <button [hidden]="!activityComplete" class="arrow-green col-lg-5 col-md-offset-10">
+    <button [hidden]="!activityComplete" class="arrow-dnd-green col-lg-5 col-md-offset-10">
         Next
     </button>    
 </div>
+
