--- a/src/app/styles/modules/_colors.scss
+++ b/src/app/styles/modules/_colors.scss
@@ -5,5 +5,7 @@ $hover-blue: #3859A5;
 $red: #ED4337;
 $grey: #4A4A49;
 $dull-grey: #9C9999;
+$light-red: #D9534F;
 $transparent: transparent;
+$dark-grey: #ECECEC;
 $grey-background-alpha: rgba(0, 0, 0, 0.7);
